# tensora-taco

./: .gitignore  MANIFEST.in  README.md  dev-requirements.txt  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
tests/: test_taco.py
