[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = [
    "src/",
    ".nox/test*/lib/python*/site-packages/",
    ".nox/test*/Lib/site-packages/",
    "*/tensora-taco/src/",
]

[tool.ruff]
src = ["src"]
line-length = 99

extend-exclude = ["src/taco/**"]

extend-select = [
    "I",   # isort
    "N",   # pep8-naming
    "RUF", # ruff
    "B",   # flake8-bugbear
    "N",   # flake8-broken-line
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "ERA", # flake8-eradicate
]

[tool.ruff.per-file-ignores]
# F401: Allow unused imports in __init__.py
"__init__.py" = ["F401"]

[build-system]
requires = ["setuptools >= 68.2.2", "wheel >= 0.41.3", "cmake >= 3.13.3"]
build-backend = "setuptools.build_meta"
